# propresenter-chord-editor

./: .gitignore  .gitmodules  BUGFIX_SUMMARY.md  README-SUBMODULE.md  README.md  SLIDE_TEXT_FIX.md  TEST.md  TESTING.md  check-test-file.ts  debug-test-file.js  lefthook.yml  package-lock.json  package.json  test-proto-load.ts  vite.config.ts
.github/workflows/: ci.yml  release.yml  test.yml
docs/: DESKTOP.md  GIT_HOOKS.md
scripts/: create-test-file.ts
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src/lib/: history.ts  index.ts  parser.test.ts  parser.ts  protobuf.node.ts  protobuf.test.ts  protobuf.ts  transpose.test.ts  transpose.ts
src/lib/__tests__/: test-song.pro
src/lib/components/: ChordEditor.svelte  ChordModal.svelte  KeySelector.svelte  Sidebar.svelte
src/routes/: +layout.svelte  +page.svelte
