[package]
name = "propresenter-chord-editor"
version = "0.1.0"
description = "ProPresenter Chord Editor - Edit chords and transpose keys in .pro files"
authors = ["Ruby"]
license = "MIT"
repository = "https://github.com/rubysworld/propresenter-chord-editor"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2"
